## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

libariadne_includedir = $(pkgincludedir)

libariadne_include_DATA = \
	geometry/approximate_set.h\
	geometry/approximation_type.h\
	geometry/ddconv.h\
	geometry/ellipsoid.h\
	geometry/geometry.h\
	geometry/grid.h\
	geometry/grid_set.h\
	geometry/list_set.h\
	geometry/parallelotope.h\
	geometry/partition_tree_set.h\
	geometry/point.h\
	geometry/point_list.h\
	geometry/polyhedron.h\
	geometry/polytope.h\
	geometry/ppl_polyhedron.h\
	geometry/rectangle.h\
	geometry/rectangle_expression.h\
	geometry/simplex.h\
	geometry/sphere.h\
	geometry/zonotope.h

EXTRA_DIST = $(libariadne_include_DATA)
