ariadne_includedir = $(pkgincludedir)
ariadne_base_includedir = $(ariadne_includedir)/base
ariadne_macros_includedir = $(ariadne_includedir)/macros
ariadne_numeric_includedir = $(ariadne_includedir)/numeric
ariadne_linear_algebra_includedir = $(ariadne_includedir)/linear_algebra
ariadne_linear_programming_includedir = $(ariadne_includedir)/linear_programming
ariadne_combinatoric_includedir = $(ariadne_includedir)/combinatoric
ariadne_function_includedir = $(ariadne_includedir)/function
ariadne_geometry_includedir = $(ariadne_includedir)/geometry
ariadne_system_includedir = $(ariadne_includedir)/system
ariadne_evaluation_includedir = $(ariadne_includedir)/evaluation
ariadne_output_includedir = $(ariadne_includedir)/output
ariadne_input_includedir = $(ariadne_includedir)/input
ariadne_models_includedir = $(ariadne_includedir)/models
ariadne_python_includedir = $(ariadne_includedir)/python

ariadne_include_DATA = *.h
ariadne_base_include_DATA = base/*.h
ariadne_macros_include_DATA = macros/*.h
ariadne_numeric_include_DATA = numeric/*.h
ariadne_linear_algebra_include_DATA = linear_algebra/*.h
ariadne_linear_programming_include_DATA = linear_programming/*.h
ariadne_combinatoric_include_DATA = combinatoric/*.h
ariadne_function_include_DATA = function/*.h
ariadne_geometry_include_DATA = geometry/*.h
ariadne_system_include_DATA = system/*.h
ariadne_evaluation_include_DATA = evaluation/*.h
ariadne_output_include_DATA = output/*.h
ariadne_input_include_DATA = input/*.h
ariadne_models_include_DATA = models/*.h
ariadne_python_include_DATA = python/*.h

EXTRA_DIST = \
	$(ariadne_include_DATA) \
	$(ariadne_base_include_DATA) \
	$(ariadne_macros_include_DATA) \
	$(ariadne_numeric_include_DATA) \
	$(ariadne_linear_algebra_include_DATA)
	$(ariadne_linear_programming_include_DATA)
	$(ariadne_combinatoric_include_DATA)
	$(ariadne_function_include_DATA)	
	$(ariadne_geometry_include_DATA)
	$(ariadne_system_include_DATA)
	$(ariadne_evaluation_include_DATA)
	$(ariadne_output_include_DATA)
	$(ariadne_input_include_DATA)
	$(ariadne_models_include_DATA)
	$(ariadne_python_include_DATA)

