add_subdirectory(utility)
add_subdirectory(numeric)
add_subdirectory(algebra)
add_subdirectory(function)
add_subdirectory(configuration)
add_subdirectory(solvers)
add_subdirectory(geometry)
add_subdirectory(concurrency)
add_subdirectory(symbolic)
add_subdirectory(dynamics)
add_subdirectory(output)
add_subdirectory(hybrid)
add_subdirectory(verification)
